--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/v1/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/pin",
-      "dest": "index.js"
-    },
-    {
-      "src": "/",
-      "dest": "index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
